--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,21 @@ coreschema==0.0.4
 Django==3.2.5
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
+drf-yasg==1.20.0
 idna==2.10
+inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 openapi-codec==1.3.2
+packaging==21.0
 pkg-resources==0.0.0
 psycopg2-binary==2.9.1
+pyparsing==2.4.7
 pytz==2021.1
 requests==2.25.1
+ruamel.yaml==0.17.10
+ruamel.yaml.clib==0.2.6
 simplejson==3.17.3
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
